Senañaden estilos a Spinnercomponent, y se alade el formulario y estilos a a la vista Contact Se añade el video que se vera para la view

--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -1,5 +1,5 @@
 @if (show) {
-<div class="loading" style="margin-top: 8%;">
+<div class="loading" style="margin-top: 8%; margin-bottom: 8%;">
     <div class="diamond"></div>
     <div class="diamond middle"></div>
     <div class="diamond"></div>
