--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,1 +1,46 @@
-<p>contact works!</p>
+<div class="fix" id="f-1">
+    <video autoplay muted loop id="video-f1">
+        <source src="../../../assets/img/6042368-hd_1920_1080_24fps.mp4" type="video/mp4">
+    </video>
+    <div id="f-content">
+        <h1>"La regla número 1 en la inversión es nunca perder dinero; la regla número 2 es nunca olvidar la regla
+            número 1." - Warren Buffet</h1>
+    </div>
+</div>
+<div class="not-fix" id="nf-1">
+    <div id="content">
+        <h1>Nuevas oportunidades de inversión en bienes raíces tokenizados</h1>
+        <p>E snuestro compromiso ofrecer soluciones de inversión sólidas y rentables. Nuestra empresa se distingue
+            por su enfoque profesional y vanguardista, trabajamos incansablemente para garantizar el éxito de cada
+            inversión. Únete a nosotros en este emocionante viaje hacia el
+            crecimiento y la prosperidad en el mundo de la inversión en bienes raíces tokenizados. </p>
+    </div>
+</div>
+<div class="fix" id="f-2"></div>
+<div class="not-fix" id="nf-2">
+    <div id="content">
+        <h1>Testing out fixed backgrounds</h1>
+        <p> En nuestro compromiso por ofrecer soluciones de inversión sólidas y rentables, te invitamos a explorar un
+            mundo de posibilidades en el mercado inmobiliario. Nuestra empresa se distingue por su enfoque profesional y
+            dedicado, respaldado por años de experiencia y un equipo altamente capacitado. Desde la adquisición de
+            propiedades hasta su gestión eficiente, trabajamos incansablemente para garantizar el éxito de cada
+            inversión. Nos apasiona motivar a nuestros clientes a alcanzar sus metas financieras a través de estrategias
+            inteligentes y oportunidades bien fundamentadas. Únete a nosotros en este emocionante viaje hacia el
+            crecimiento y la prosperidad en el mundo de la inversión en bienes raíces. </p>
+    </div>
+</div>
+<div class="fix" id="f-3"></div>
+<div class="not-fix" id="nf-3">
+    <div class="container">
+        <form class="form" action="">
+            <p class="title">INVIERTE CON NOSTROS</p>
+            <input placeholder="Nombre" class="username input" type="text" required>
+            <input placeholder="Apellidos" class="surname input" type="text" required>
+            <input placeholder="Dirección" class="direccion input" type="text" required>
+            <input placeholder="Email" class="password input" type="Email" required>
+            <input placeholder="Teléfono" class="telefono input" type="text" minlength="9" required>
+            <input placeholder="Capital a invertir" class="capital input" type="number" min="0" required>
+            <button class="btn" type="submit">Invertir</button>
+        </form>
+    </div>
+</div>
