--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -10,7 +10,7 @@
 <div class="not-fix" id="nf-1">
     <div id="content">
         <h1>Nuevas oportunidades de inversión en bienes raíces tokenizados</h1>
-        <p>E snuestro compromiso ofrecer soluciones de inversión sólidas y rentables. Nuestra empresa se distingue
+        <p>Es nuestro compromiso ofrecer soluciones de inversión sólidas y rentables. Nuestra empresa se distingue
             por su enfoque profesional y vanguardista, trabajamos incansablemente para garantizar el éxito de cada
             inversión. Únete a nosotros en este emocionante viaje hacia el
             crecimiento y la prosperidad en el mundo de la inversión en bienes raíces tokenizados. </p>
@@ -19,14 +19,11 @@
 <div class="fix" id="f-2"></div>
 <div class="not-fix" id="nf-2">
     <div id="content">
-        <h1>Testing out fixed backgrounds</h1>
-        <p> En nuestro compromiso por ofrecer soluciones de inversión sólidas y rentables, te invitamos a explorar un
-            mundo de posibilidades en el mercado inmobiliario. Nuestra empresa se distingue por su enfoque profesional y
-            dedicado, respaldado por años de experiencia y un equipo altamente capacitado. Desde la adquisición de
-            propiedades hasta su gestión eficiente, trabajamos incansablemente para garantizar el éxito de cada
-            inversión. Nos apasiona motivar a nuestros clientes a alcanzar sus metas financieras a través de estrategias
-            inteligentes y oportunidades bien fundamentadas. Únete a nosotros en este emocionante viaje hacia el
-            crecimiento y la prosperidad en el mundo de la inversión en bienes raíces. </p>
+        <h1>Nuestra misión y visión</h1>
+        <p>Nuestro objetivo es convertirnos en la primera red verdaderamente descentralizada para la compra y venta de
+            inmuebles. En nuestra visión, la adquisición de un inmueble se llevará a cabo mediante votaciones de los
+            titulares del token $RFUND. De esta manera, los propietarios competirán por ofrecer productos de mejor
+            calidad a precios más competitivos, ganándose así la confianza de la comunidad inversora.</p>
     </div>
 </div>
 <div class="fix" id="f-3"></div>
@@ -40,6 +37,12 @@
             <input placeholder="Email" class="password input" type="Email" required>
             <input placeholder="Teléfono" class="telefono input" type="text" minlength="9" required>
             <input placeholder="Capital a invertir" class="capital input" type="number" min="0" required>
+            <select class="select input" required>
+                <option value="">Selecciona un inmueble</option>
+                <option value="option1">Opción 1</option>
+                <option value="option2">Opción 2</option>
+                <option value="option3">Opción 3</option>
+            </select>
             <button class="btn" type="submit">Invertir</button>
         </form>
     </div>
