--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -29,19 +29,23 @@
 <div class="fix" id="f-3"></div>
 <div class="not-fix" id="nf-3">
     <div class="container">
-        <form class="form" action="">
+        <form (ngSubmit)="onSubmit()" [formGroup]="reactiveForm" class="form" method="post">
             <p class="title">INVIERTE CON NOSTROS</p>
-            <input placeholder="Nombre" class="username input" type="text" required>
-            <input placeholder="Apellidos" class="surname input" type="text" required>
-            <input placeholder="Dirección" class="direccion input" type="text" required>
-            <input placeholder="Email" class="password input" type="Email" required>
-            <input placeholder="Teléfono" class="telefono input" type="text" minlength="9" required>
-            <input placeholder="Capital a invertir" class="capital input" type="number" min="0" required>
-            <select class="select input" required>
+            <input formControlName="nombre" placeholder="Nombre" class="username input" type="text" required>
+            <input formControlName="apellidos" placeholder="Apellidos" class="surname input" type="text" required>
+            <input formControlName="direccion" placeholder="Dirección" class="direccion input" type="text" required>
+            <input formControlName="email" placeholder="Email" class="password input" type="Email" required>
+            <input formControlName="telefono" placeholder="Teléfono" class="telefono input" type="text" minlength="9"
+                maxlength="11" required>
+            <input formControlName="capital" placeholder="Capital a invertir" class="capital input" type="number"
+                min="0" required>
+            <select formControlName="property" class="select input" required>
                 <option value="">Selecciona un inmueble</option>
-                <option value="option1">Opción 1</option>
-                <option value="option2">Opción 2</option>
-                <option value="option3">Opción 3</option>
+                @for (item of salesProperty; track salesProperty) {
+                @if (item.disponibilidad) {
+                <option value={{item.id}}>{{item.id}} - {{item.tipo_inmueble}}</option>
+                }
+                }
             </select>
             <button class="btn" type="submit">Invertir</button>
         </form>
