--- a/src/app/views/contact/contact.component.css
+++ b/src/app/views/contact/contact.component.css
@@ -163,7 +163,7 @@ h1 {
 
 .title {
     color: wheat;
-    margin: 3rem 0;
+    margin: 3rem 0 2rem 0;
     font-size: 24px;
 }
 
@@ -274,4 +274,14 @@ h1 {
 
 .container {
     padding: 4% !important;
+}
+
+.non_active {
+    display: none !important;
+}
+
+.active {
+    margin-top: 5%;
+    width: 20rem;
+    display: flex !important;
 }
