Se cambia favicon del proyecto Se solucionan algunos errores de estilos

--- a/src/app/components/minicard/minicard.component.css
+++ b/src/app/components/minicard/minicard.component.css
@@ -84,7 +84,7 @@
     font-size: 13px;
     letter-spacing: 2px;
     font-weight: 600;
-    color: #868686;
+    color: #4d4d4d;
 }
 
 .card__title {
