Se quitan console.log olvidados

--- a/src/app/components/minicard/minicard.component.html
+++ b/src/app/components/minicard/minicard.component.html
@@ -1,4 +1,4 @@
-<section class="cards" (click)="reactionPost()">
+<section class="cards" ((dblclick))="reactionPost()">
     <article class="card card--1">
         <div class="card__info-hover">
             @if (reaction) {
