Se acaba de diseñar todo el formulario de logeo/registro Se ajustan las condiciones para cada situacion Se añaden medidas de seguridad

--- a/src/app/components/loginform/loginform.component.css
+++ b/src/app/components/loginform/loginform.component.css
@@ -180,7 +180,7 @@ input::placeholder {
 
 .user_unregistered-text,
 .user_registered-text {
-    font-size: 0.83rem;
+    font-size: 0.9rem;
     line-height: 1.4em;
 }
 
@@ -400,4 +400,8 @@ input::placeholder {
 .user_options-container {
     display: inline-table;
     width: 100%;
+}
+
+.alerts {
+    font-size: 12px;
 }
