--- a/src/app/components/loginform/loginform.component.html
+++ b/src/app/components/loginform/loginform.component.html
@@ -1,7 +1,3 @@
-<!--
-This was created based on the Dribble shot by Deepak Yadav that you can find at https://goo.gl/XRALsw
-I'm @hk95 on GitHub. Feel free to message me anytime.
--->
 <!-- Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -12,9 +8,19 @@ I'm @hk95 on GitHub. Feel free to message me anytime.
                     <div class="user_options-text">
                         <!-- Letrero para el registro -->
                         <div class="user_options-unregistered">
+                            @if (isLogin) {
+                            <h2 class="user_unregistered-title">¡Bienvenido!</h2>
+                            <p [ngStyle]="{'color': isLogin ? '#198754': ''}" class="user_unregistered-text">Gracias por
+                                iniciar sesión, ahora puedes empezar a invertir con nosotros.</p>
+                            }@else if(!errorStatus) {
+                            <h2 class="user_registered-title">No existe el usuario</h2>
+                            <p [ngStyle]="{'color': !isRegistred ? '#dc3545': ''}" class="user_registered-text">Primero
+                                debe de crear una cuenta.</p>
+                            }@else {
                             <h2 class="user_unregistered-title">¿No tienes cuenta?</h2>
                             <p class="user_unregistered-text">Registrate para poder ser de los primeros en enterarte de
                                 todas las novedades.</p>
+                            }
                             <div class="row"><button class="user_unregistered-signup" id="signup-button"
                                     (click)="onSignUp()">Sign
                                     up</button></div>
@@ -63,7 +69,11 @@ I'm @hk95 on GitHub. Feel free to message me anytime.
                                     </div>
                                 </fieldset>
                                 <div class="forms_buttons">
-                                    <input type="submit" value="Log In" class="forms_buttons-action">
+                                    <input [ngClass]="{'hidden': !isHiddden}" type="submit" value="Log In"
+                                        class="forms_buttons-action">
+                                    <div [ngClass]="{'hidden': isHiddden}" style="color: #0c74ba;"
+                                        class="spinner-border" role="status">
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -117,7 +127,11 @@ I'm @hk95 on GitHub. Feel free to message me anytime.
                                     </div>
                                 </fieldset>
                                 <div class="forms_buttons">
-                                    <input type="submit" value="Sign up" class="forms_buttons-action">
+                                    <input [ngClass]="{'hidden': !isHiddden}" type="submit" value="Sign up"
+                                        class="forms_buttons-action">
+                                    <div [ngClass]="{'hidden': isHiddden}" style="color: #0c74ba;"
+                                        class="spinner-border" role="status">
+                                    </div>
                                 </div>
                             </form>
                         </div>
