Generamos el componente LogoutformComponent para los forms de logout y eliminar cuenta Cambiamos y ajustamos algunos estilos Correcciones gramaticales

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,3 +60,4 @@
 </nav>
 <div class="background-blur"></div>
 <app-loginform (responseData)="loginSucces($event)"></app-loginform>
+<app-logoutform></app-logoutform>
