--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -10,7 +10,7 @@
                 <div class="clearfix">
                     <img src={{image}} class="float-md-top mb-3 imf-fluid" alt="...">
                     <div class="row">
-                        <div class="col d-flex justify-content-center">
+                        <div class="col d-flex justify-content-center mt-3">
                             <div class="mt-1 mx-auto">
                                 <h2>Detalles</h2>
                                 <ul class="list-group">
@@ -23,7 +23,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col d-flex justify-content-center">
+                        <div class="col d-flex justify-content-center mt-5">
                             <div class="mt-1 mx-auto w-100">
                                 <h2>Estadísticas</h2>
                                 <span class="progress-label">Precio de compra: {{precio |
