--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,4 +60,4 @@
 </nav>
 <div class="background-blur"></div>
 <app-loginform (responseData)="loginSucces($event)"></app-loginform>
-<app-logoutform></app-logoutform>
+<app-logoutform (responseData)="logoutSucces($event)"></app-logoutform>
